# sdlpal-rg351p

./: .gitignore  CMakeLists.txt  input.c  midi.c  script.c  sdlpal-351.code-workspace  ui.h
adplug/: dosbox_opls.cpp  mame_opls.cpp  mame_opls.h  nuked_opl.c
docs/: AUTHORS  README.md
emscripten/: Makefile
libmad/: libmad_config.h
scripts/: gencert.bat  gengitrev.bat
src/: battle.c  battle.h  es_bridge.c  es_bridge.h  fight.c  global.c  global.h  input.c  input.h  magicmenu.c  main.c  main.h  midi.c  palcommon.h  play.c  play.h  scene.c  script.c  text.c  ui.h  uibattle.c  uibattle.h  uigame.c  uigame.h
src/adplug/: dosbox_opls.cpp  mame_opls.cpp  mame_opls.h  nuked_opl.c
src/json5/: json5.c  json5.h
unix/: Makefile  pal_config.h
